Remove User entity and replace it with ids. Remove update method for job offer. Adjust state of job offer.
