# rengars_marketplace/models/CreateJobApplicationDto.py
@@ -1,13 +1,12 @@
 # coding: utf-8
 
 from __future__ import absolute_import
-from datetime import date, datetime  # noqa: F401
 
+from datetime import date, datetime  # noqa: F401
 from typing import List, Dict  # noqa: F401
 
-from rengars_marketplace.models.Model import Model
-from rengars_marketplace.models.User import User  # noqa: F401,E501
 from rengars_marketplace import util
+from rengars_marketplace.models.Model import Model
 
 
 class CreateJobApplicationDto(Model):
@@ -16,28 +15,28 @@ class CreateJobApplicationDto(Model):
     Do not edit the class manually.
     """
 
-    def __init__(self, applicant: User = None, note: str = None, job_offer_id: int = None):  # noqa: E501
+    def __init__(self, applicant_id: int = None, note: str = None, job_offer_id: int = None):  # noqa: E501
         """CreateJobApplicationDto - a model defined in Swagger
 
-        :param applicant: The applicant of this CreateJobApplicationDto.  # noqa: E501
-        :type applicant: User
+        :param applicant_id: The applicant_id of this CreateJobApplicationDto.  # noqa: E501
+        :type applicant_id: int
         :param note: The note of this CreateJobApplicationDto.  # noqa: E501
         :type note: str
         :param job_offer_id: The job_offer_id of this CreateJobApplicationDto.  # noqa: E501
         :type job_offer_id: int
         """
         self.swagger_types = {
-            'applicant': User,
+            'applicant_id': int,
             'note': str,
             'job_offer_id': int
         }
 
         self.attribute_map = {
-            'applicant': 'applicant',
+            'applicant_id': 'applicantId',
             'note': 'note',
             'job_offer_id': 'jobOfferId'
         }
-        self._applicant = applicant
+        self._applicant_id = applicant_id
         self._note = note
         self._job_offer_id = job_offer_id
 
@@ -53,27 +52,27 @@ class CreateJobApplicationDto(Model):
         return util.deserialize_model(dikt, cls)
 
     @property
-    def applicant(self) -> User:
-        """Gets the applicant of this CreateJobApplicationDto.
+    def applicant_id(self) -> int:
+        """Gets the applicant_id of this CreateJobApplicationDto.
 
 
-        :return: The applicant of this CreateJobApplicationDto.
-        :rtype: User
+        :return: The applicant_id of this CreateJobApplicationDto.
+        :rtype: int
         """
-        return self._applicant
+        return self._applicant_id
 
-    @applicant.setter
-    def applicant(self, applicant: User):
-        """Sets the applicant of this CreateJobApplicationDto.
+    @applicant_id.setter
+    def applicant_id(self, applicant_id: int):
+        """Sets the applicant_id of this CreateJobApplicationDto.
 
 
-        :param applicant: The applicant of this CreateJobApplicationDto.
-        :type applicant: User
+        :param applicant_id: The applicant_id of this CreateJobApplicationDto.
+        :type applicant_id: int
         """
-        if applicant is None:
-            raise ValueError("Invalid value for `applicant`, must not be `None`")  # noqa: E501
+        if applicant_id is None:
+            raise ValueError("Invalid value for `applicant_id`, must not be `None`")  # noqa: E501
 
-        self._applicant = applicant
+        self._applicant_id = applicant_id
 
     @property
     def note(self) -> str:
