# rengars_marketplace/models/JobOfferState.py
@@ -5,11 +5,11 @@ from __future__ import absolute_import
 from datetime import date, datetime  # noqa: F401
 from typing import List, Dict  # noqa: F401
 
-from rengars_marketplace import util
-from rengars_marketplace.models.Model import Model
+from swagger_server import util
+from swagger_server.models.base_model_ import Model
 
 
-class JobApplicationState(Model):
+class JobOfferState(Model):
     """NOTE: This class is auto generated by the swagger code generator program.
 
     Do not edit the class manually.
@@ -18,13 +18,12 @@ class JobApplicationState(Model):
     """
     allowed enum values
     """
-    NEW = "NEW"
-    ACTIVE = "ACTIVE"
-    REJECTED = "REJECTED"
-    ACCEPTED = "ACCEPTED"
+    OPEN = "OPEN"
+    HIRED = "HIRED"
     WITHDRAWN = "WITHDRAWN"
+
     def __init__(self):  # noqa: E501
-        """JobApplicationState - a model defined in Swagger
+        """JobOfferState - a model defined in Swagger
 
         """
         self.swagger_types = {
@@ -34,12 +33,12 @@ class JobApplicationState(Model):
         }
 
     @classmethod
-    def from_dict(cls, dikt) -> 'JobApplicationState':
+    def from_dict(cls, dikt) -> 'JobOfferState':
         """Returns the dict as a model
 
         :param dikt: A dict.
         :type: dict
-        :return: The JobApplicationState of this JobApplicationState.  # noqa: E501
-        :rtype: JobApplicationState
+        :return: The JobOfferState of this JobOfferState.  # noqa: E501
+        :rtype: JobOfferState
         """
         return util.deserialize_model(dikt, cls)
